tests/fuse/full/concurrency/shared_rank_violation.fuse
// EXPECTED ERROR:
// error: cannot acquire @rank(2) while holding @rank(3)
//   --> shared_rank_violation.fuse:10:3

@entrypoint
fn main() {
  @rank(3) val metrics: Shared<Int> = Shared::<Int>.new()
  @rank(2) val db: Shared<Int> = Shared::<Int>.new()
  val m = metrics.write()
  val d = db.write()
  println("bad")
}
